# This file is part of MyPaint.
# Copyright (C) 2024 the MyPaint project
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.

# /meson.options

option('brushes_dir', type : 'string', description: 'use the provided argument as brush directory path')

option('libmypaint_locale_dir', type : 'string',
  description : 'set the location of the libmypaint message catalogs' +
  'If --libmypaint-locale-path-from-pkgconf is set, using this' +
  'flag will raise an error. If neither flag is used, or the value' +
  'passed is the empty string, the directory used for mypaint\'s own' +
  'locale data is used for libmypaint\'s as well.')

option('libmypaint_locale_pkgconfig', type : 'boolean', value : false,
  description: 'set the location of libmypaint\'s message catalogs using pkg-config' +
  'The path is set to {prefix}/share/locale, where "prefix" is' +
  'fetched from libmypaint\'s pkg-config data.')

option('translation_threshold', type : 'integer', min : 0, max : 100, value : 0,
  description : 'Limit translations to those with a completion percentage' +
  'at or above the given threshold. Argument range: [0..100]')

