# This file is part of MyPaint.
# Copyright (C) 2024 the MyPaint project
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.

# /src/lib_pure/meson.build

install_subdir('src/lib/python', install_dir : 'lib/mypaint/lib', strip_directory : true)
